# ceae

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 62f8a65a16a2_added_wind_energy_generation_prediction_.py  7bdb334ac6f7_add_table_weather_data.py
api/: Dockerfile  crud.py  database.py  main.py  schemas.py
ceae/: Dockerfile  fetch_cities_weather.py  models.py  pipeline.py  run_pipeline.py  s3_pipeline.py  sql_pipeline.py
ceae/data_fetchers/: current_weather.py
ceae/storage/: filesystem_storage.py  s3_storage.py  sql_storage.py
ceae/wind_energy_predictions/: pipeline.py  predict.py  tasks.py
ceae/wind_energy_predictions/models/: simple_regression.joblib
config/: .env  ceae-db.env  openweather_cities.yml
db/: .gitignore  setup.cfg  setup.py
db/db/: helpers.py  models.py
scripts/: 1-init-ceae-db.sql  2-create-tables-ceae-db.sql  fetch_cities.sh
tests/: test_ceae.py
