[tool.poetry]
name = "ceae"
version = "0.1.0"
description = ""
authors = ["edouard <edouard.argenson@datapred.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.5"
numpy = "^1.21.4"
requests = "^2.26.0"
SQLAlchemy = "^1.4.28"
seaborn = "^0.11.2"
PyYAML = "^6.0"
boto3 = "^1.20.41"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
