[tool.poetry]
name = "ceae"
version = "0.1.0"
description = ""
authors = ["edouard <edouard.argenson@datapred.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.5"
numpy = "^1.21.4"
requests = "^2.26.0"
SQLAlchemy = "^1.4.28"
seaborn = "^0.11.2"
PyYAML = "^6.0"
boto3 = "^1.20.41"
alembic = "^1.7.6"
psycopg2 = "^2.9.3"
importlib-metadata = "^4.11.3"
importlib-resources = "^5.6.0"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
