[metadata]
name = db
description = TODO

#[options]
#packages = .

[options]
packages =
    db

#packages = find: # OR `find_namespaces:` if you want to use namespaces
#package_dir = .
#    =.
#
#[options.packages.find] (always `find` even if `find_namespaces:` was used before)
## This section is optional
## Each entry in this section is optional, and if not specified, the default values are:
## `where=.`, `include=*` and `exclude=` (empty).
#where=.
#include=*
